@@ -7,3 +7,6 @@
     credits: https://reddit.com/u/hillbull
 2019-01-05  Jim Zubov <jz@vesvault.com>
     * lib/libVES.c libVES_cleanseJVar(): wipe encrypted metadata
+2019-01-07  Jim Zubov <jz@vesvault.com>
+    * lib/libVES/KeyAlgo_EVP.c uninitialized plaintext length
+    may cause EVP_PKEY_decrypt() to fail
